--- a/app/views/coupons/new.html.erb
+++ b/app/views/coupons/new.html.erb
@@ -1,10 +1,10 @@
-<h3>Coupon Form</h3>
+<h1>New Coupon Form</h1>
+
 <%= form_tag coupons_path do %>
-  <label>Store:</label><br>
-  <%= text_field_tag :'coupon[store]' %><br>
+  <label for="coupon_code">Coupon Code</label>
+  <%=text_field_tag :'coupon[coupon_code]' %><br>
+  <label for="store">Store</label>
+  <%=text_field_tag :'coupon[store]' %>
 
-  <label>Coupon Code:</label><br>
-  <%= text_area_tag :'coupon[coupon_code]' %><br>
-
-  <%= submit_tag "Submit Coupon" %>
-<% end %>
+  <%=submit_tag "Submit Coupon" %>
+<%end%>
